--- a/unum.yml
+++ b/unum.yml
@@ -1,72 +1,8 @@
 project:
-  - name: BuildSystem
-  # - gpu: True
-  # - python: True
-
-unum:
-  - Primitive
-  - Algo
-  - Utils
+  - name: UCSB
 
 conan:
   - fmt/7.1.3
   - gtest/1.10.0
   - benchmark/1.5.2
   - nlohmann_json/3.10.4
-
-conda:
-  - conda-forge: python/3.9.2
-  - conda-forge: pybind11
-
-pip:
-  -
-
-cpp-library:
-  # - any 3rdparty cpp library
-  # - linking_flag: any 3rdparty cpp libraries
-
-packages:
-  # pkg-config:
-  #   - pc_name1, pc_name2
-  #   - linking_flag: pc_name3, pc_name4
-
-cuda-library:
-  # - cudart
-
-directories:
-  # - linked:
-  # - include:
-  # - gitignore:
-
-build:
-  # - unum-deps: "DiskIO"
-  # - unum-dataset: 
-  # - c-compiler: 
-  # - cpp-compiler: 
-  # - cuda-compiler: 
-  # - cpu-isa: bmi2 avx2
-  # - cuda-isa: "75"
-  # - cpp-flags: dpdk
-  # - cuda-flags:
-  # - name: laptop
-  # - cpu-isa: avx512
-  # - cuda-isa: "80"
-  # - conan-deps: "gtest/1.10.0" "benchmark/1.5.2"
-  # - conda-deps:
-  #   - conda-forge: python/3.9.2
-  #   - conda-forge: pybind11
-  # - pip-deps: "colorama"
-  # - cpp-library-deps:
-  #   - any 3rdparty cpp library
-  #   - linking_flag: any 3rdparty cpp libraries
-  # - packages-deps:
-  #   - pc_name1, pc_name2
-  #   - linking_flag: pc_name3, pc_name4
-  # - cuda-library-deps: "cudart"
-  # - directories-deps:
-  #   - linked:
-  #   - include:
-  #   - gitignore:
-
-launch:
-  # - mode: sudo
