--- a/unum.yml
+++ b/unum.yml
@@ -1,8 +1,11 @@
 project:
   - name: UCSB
 
+unum:
+  - DiskKV
+
 conan:
-  - fmt/7.1.3
+  - fmt/8.0.1
   - gtest/1.10.0
   - benchmark/1.5.2
   - nlohmann_json/3.10.4
