--- a/bench/configs/unumdb/config.json
+++ b/bench/configs/unumdb/config.json
@@ -2,8 +2,8 @@
     "migration_capacity": 134217728,
     "migration_max_cnt": 100000,
     "files_size_enlarge_factor": 8,
-    "max_file_cnt": 32,
+    "max_files_cnt": 32,
     "files_count_enlarge_factor": 1,
-    "max_files_cnt_k": 1000,
+    "uring_max_files_cnt": 1000,
     "uring_queue_depth": 256
 }
