--- a/bench/configs/rocksdb/options.ini
+++ b/bench/configs/rocksdb/options.ini
@@ -63,7 +63,7 @@
 
   # This is the maximum buffer size that is used by WritableFileWriter.
   writable_file_max_buffer_size=1048576
-  wal_dir=tmp/ycsb-rocskdb
+  wal_dir=tmp/rocksdb
   
   # Specifies the time interval for the info log file to roll (in seconds). If specified with non-zero value, log file will be rolled if it has been active longer than `log_file_time_to_roll`.
   # Default: 0 (disabled)
