--- a/bench/configs/unumdb/config.json
+++ b/bench/configs/unumdb/config.json
@@ -4,6 +4,6 @@
     "files_size_enlarge_factor": 8,
     "max_files_cnt": 32,
     "files_count_enlarge_factor": 1,
-    "uring_max_files_cnt": 1000,
+    "uring_max_files_count": 1000,
     "uring_queue_depth": 256
 }
