UnumDB: Implemented transactional benchmarks

--- a/bench/configs/unumdb/100MB.cfg
+++ b/bench/configs/unumdb/100MB.cfg
@@ -1,4 +1,6 @@
 {
+    "transaction_migration_capacity": 67108864,
+    "transaction_migration_max_cnt": 60000,
     "migration_capacity": 67108864,
     "migration_max_cnt": 60000,
     "files_size_enlarge_factor": 4,
