--- a/bench/configs/unumdb/default.cfg
+++ b/bench/configs/unumdb/default.cfg
@@ -1,4 +1,6 @@
 {
+    "transaction_migration_capacity": 134217728,
+    "transaction_migration_max_cnt": 100000,
     "migration_capacity": 134217728,
     "migration_max_cnt": 100000,
     "files_size_enlarge_factor": 4,
