--- a/bench/configs/unumdb/100MB.cfg
+++ b/bench/configs/unumdb/100MB.cfg
@@ -9,5 +9,6 @@
     "files_count_enlarge_factor": 2,
     "io_device": "pulling",
     "uring_max_files_count": 100,
-    "uring_queue_depth": 256
+    "uring_queue_depth": 256,
+    "paths": [""]
 }
