--- a/bench/configs/unumdb/default.cfg
+++ b/bench/configs/unumdb/default.cfg
@@ -1,4 +1,5 @@
 {
+    "threads_max_cnt": 128,
     "transaction_migration_capacity": 16368,
     "transaction_migration_max_cnt": 10,
     "unfixed_citizen_max_size": 4096,
