UnumDB: use new config

--- a/bench/configs/unumdb/100MB.cfg
+++ b/bench/configs/unumdb/100MB.cfg
@@ -5,9 +5,8 @@
     "unfixed_citizen_max_size": 4096,
     "migration_capacity": 67108864,
     "migration_max_cnt": 60000,
-    "files_size_enlarge_factor": 4,
-    "files_count_enlarge_factor": 2,
-    "max_files_cnt": 8,
+    "street_enlarge_factor": 4,
+    "street_capacity_bytes": 1073741824,
     "io_device": "pulling",
     "uring_max_files_count": 100,
     "uring_queue_depth": 256,
