--- a/bench/configs/unumdb/default.cfg
+++ b/bench/configs/unumdb/default.cfg
@@ -5,9 +5,8 @@
     "unfixed_citizen_max_size": 4096,
     "migration_capacity": 134217728,
     "migration_max_cnt": 100000,
-    "files_size_enlarge_factor": 4,
-    "files_count_enlarge_factor": 2,
-    "max_files_cnt": 36,
+    "street_enlarge_factor": 4,
+    "street_capacity_bytes": 4831838208,
     "io_device": "pulling",
     "uring_max_files_count": 1000,
     "uring_queue_depth": 256,
