UnumDB: use newer version of (alfa version)

--- a/bench/configs/unumdb/100MB.cfg
+++ b/bench/configs/unumdb/100MB.cfg
@@ -1,13 +1,13 @@
 {
+    "txn_cache_elements_max_cnt": 10,
+    "txn_cache_elements_capacity_bytes": 16368,
     "threads_max_cnt": 128,
-    "transaction_migration_capacity": 16368,
-    "transaction_migration_max_cnt": 10,
+    "cache_elements_max_cnt": 60000,
+    "cache_elements_capacity_bytes": 67108864,
+    "l0_capacity_bytes": 1073741824,
+    "level_enlarge_factor": 4,
     "unfixed_citizen_max_size": 4096,
-    "migration_capacity": 67108864,
-    "migration_max_cnt": 60000,
-    "street_enlarge_factor": 4,
-    "street_capacity_bytes": 1073741824,
-    "io_device": "pulling",
+    "io_device_name": "pulling",
     "uring_max_files_count": 100,
     "uring_queue_depth": 256,
     "paths": [""]
