UnumDB: Config bug fix

--- a/bench/configs/unumdb/default.cfg
+++ b/bench/configs/unumdb/default.cfg
@@ -4,8 +4,8 @@
     "threads_max_cnt": 128,
     "cache_elements_max_cnt": 100000,
     "cache_elements_capacity_bytes": 134217728,
-    "l0_capacity_bytes": 4,
-    "level_enlarge_factor": 4831838208,
+    "l0_capacity_bytes": 4831838208,
+    "level_enlarge_factor": 4,
     "unfixed_citizen_max_size": 4096,
     "io_device_name": "pulling",
     "uring_max_files_count": 1000,
