--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,8 @@ else ()
 endif()
 
 # Use this if you are manually installing rockdb and leveldb, otherwise comment it
-# set(CXX_TARGET_LINK_LIBRARIES rocksdb leveldb)
+set(CXX_TARGET_LINK_LIBRARIES rocksdb leveldb)
+set(CXX_TARGET_LINK_LIBRARIES_WITH_FLAGS z uring)
 
 set(PKG_CONFIG ON)
 if (${PKG_CONFIG})
@@ -142,7 +143,9 @@ find_package(Threads REQUIRED)
 
 add_executable(ucsb_bench ./src/bench.cxx)
 target_link_libraries(ucsb_bench${ARTIFACT_SUFFIX} 
-  # ${CXX_TARGET_LINK_LIBRARIES}
+  ${CXX_TARGET_LINK_LIBRARIES}
   ${PKG_PACKAGES_LIBRARIES}
   ${CONAN_LIBS}
+  ${CMAKE_DL_LIBS}
+  ${CXX_TARGET_LINK_LIBRARIES_WITH_FLAGS}
 )
