Fix zlib conflict

--- a/unum.yml
+++ b/unum.yml
@@ -11,6 +11,7 @@ dependencies:
     - nlohmann_json/3.10.4
     - lmdb/0.9.29
     - snappy/1.1.9
+    - zlib/1.2.11
     - mongo-cxx-driver/3.6.6
 
   packages:
