UnumDB: Added resource limits

--- a/bench/configs/unumdb/default.cfg
+++ b/bench/configs/unumdb/default.cfg
@@ -1,4 +1,10 @@
 {
+    "mem_limit": 20000000000,
+    "gpu_mem_limit": 0,
+    "io_device_name": "pulling",
+    "uring_max_files_count": 100,
+    "uring_queue_depth": 4096,
+    "paths": [""],
     "txn_cache_elements_max_cnt": 10,
     "txn_cache_elements_capacity_bytes": 16368,
     "threads_max_cnt": 128,
@@ -6,9 +12,5 @@
     "cache_elements_capacity_bytes": 134217728,
     "l0_capacity_bytes": 4831838208,
     "level_enlarge_factor": 4,
-    "unfixed_citizen_max_size": 4096,
-    "io_device_name": "pulling",
-    "uring_max_files_count": 1000,
-    "uring_queue_depth": 4096,
-    "paths": [""]
+    "unfixed_citizen_max_size": 4096
 }
