--- a/bench/configs/unumdb/10TB.cfg
+++ b/bench/configs/unumdb/10TB.cfg
@@ -1,4 +1,10 @@
 {
+    "mem_limit": 2000000000000,
+    "gpu_mem_limit": 0,
+    "io_device_name": "pulling",
+    "uring_max_files_count": 10000,
+    "uring_queue_depth": 4096,
+    "paths": [""],
     "txn_cache_elements_max_cnt": 10,
     "txn_cache_elements_capacity_bytes": 16368,
     "threads_max_cnt": 128,
@@ -6,9 +12,5 @@
     "cache_elements_capacity_bytes": 268435456,
     "l0_capacity_bytes": 9663676416,
     "level_enlarge_factor": 4,
-    "unfixed_citizen_max_size": 4096,
-    "io_device_name": "pulling",
-    "uring_max_files_count": 10000,
-    "uring_queue_depth": 4096,
-    "paths": [""]
+    "unfixed_citizen_max_size": 4096
 }
