Set redis config appendonly to no

--- a/bench/configs/redis/redis.cfg
+++ b/bench/configs/redis/redis.cfg
@@ -30,7 +30,7 @@ lazyfree-lazy-eviction no
 lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
 replica-lazy-flush no
-appendonly yes
+appendonly no
 # appendfilename "appendonly.aof"
 # appendfsync everysec
 # no-appendfsync-on-rewrite no
