Fix: Configs polished

--- a/bench/configs/mongodb/100GB.cfg
+++ b/bench/configs/mongodb/100GB.cfg
@@ -1,12 +1,12 @@
 storage:
-  dbPath: /home/davit/Code/UCSB/tmp/mongodb/100GB
+  dbPath: ./db_main/mongodb/100GB
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./tmp/mongodb/100GB/mongod.log
+  path: ./db_main/mongodb/100GB/mongod.log
 
 net:
   port: 27017
