--- a/bench/configs/mongodb/100MB.cfg
+++ b/bench/configs/mongodb/100MB.cfg
@@ -1,12 +1,12 @@
 storage:
-  dbPath: ./tmp/mongodb/100MB
+  dbPath: ./db_main/mongodb/100MB
   journal:
     enabled: true
 
 systemLog:
   destination: file
   logAppend: true
-  path: ./tmp/mongodb/100MB/mongod.log
+  path: ./db_main/mongodb/100MB/mongod.log
 
 net:
   port: 27017
