--- a/bench/configs/redis/100MB.cfg
+++ b/bench/configs/redis/100MB.cfg
@@ -1,6 +1,6 @@
 {
     "connection_type": "UNIX",
-    "path": "./tmp/redis/100MB/redis.sock",
+    "path": "./db_main/redis/100MB/redis.sock",
     "host": "127.0.0.1",
     "port": 6999,
     "pool_size": 64,
