Fix: First runnable UKV

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,5 +144,5 @@ target_link_libraries(ucsb_bench${ARTIFACT_SUFFIX}
   ${CONAN_LIBS}
   ${CMAKE_DL_LIBS}
   ${CXX_TARGET_LINK_LIBRARIES_WITH_FLAGS}
-  asan # TMP: solution, wating for Darvin
+  -fsanitize=address # Temp solution, wating for Darvin
 )
