Fix: UKV: Enhanced auto resolve of config's paths

--- a/bench/configs/ukv/default.cfg
+++ b/bench/configs/ukv/default.cfg
@@ -1,11 +1,9 @@
+// Warning: Values of 'directory', 'data_directories' and 'engine_config_path' filled by the benchmark and based on the run.py arguments.
+// The engine_config_path resolved based on the UKV config file path and the engine name: **/configs/$ENGINE/$THIS_FILE_NAME
+// But if you set the values here the above stuff will be disabled.
 {
     "version": "1.0",
-    "directory": "NOTE: OVERWRITTEN BY PASSED ARGUMENTS, SEE $(run.py)",
-    "data_directories": [
-    {
-        "path": "NOTE: OVERWRITTEN BY PASSED ARGUMENTS, SEE $(run.py)",
-        "max_size": "0"
-    }
-    ],
-    "engine_config_path": "NOTE: OVERWRITTEN BY PASSED ARGUMENTS, SEE $(run.py)"
+    "directory": "",
+    "data_directories": [],
+    "engine_config_path": ""
 }
