Add: Format results in console

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ Makefile
 CMakeCache.txt
 *.cmake
 cmake/*
+!cmake/benchmark.cmake
+!cmake/tabulate.cmake
 !cmake/rocksdb.cmake
 !cmake/leveldb.cmake
 !cmake/wiredtiger.cmake
