--- a/bench/configs/ukv/1TB.cfg
+++ b/bench/configs/ukv/1TB.cfg
@@ -1,9 +1,12 @@
-// Warning: Values of 'directory', 'data_directories' and 'engine_config_path' filled by the benchmark and based on the run.py arguments.
+        "config_file_path": ""
+// Warning: Values of 'directory', 'data_directories' and 'engine.config_file_path' filled by the benchmark and based on the run.py arguments.
 // The engine_config_path resolved based on the UKV config file path and the engine name: **/configs/$ENGINE/$THIS_FILE_NAME
 // But if you set the values here the above stuff will be disabled.
 {
     "version": "1.0",
     "directory": "",
     "data_directories": [],
-    "engine_config_path": ""
+    "engine": {
+        "config_file_path": ""
+    }
 }
