--- a/bench/configs/ukv/100MB.cfg
+++ b/bench/configs/ukv/100MB.cfg
@@ -6,6 +6,6 @@
     "directory": "",
     "data_directories": [],
     "engine": {
-        "config_file_path": "",
+        "config_file_path": ""
     }
 }
