Make: Add mongo driver CMake file

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ cmake/*
 !cmake/rocksdb.cmake
 !cmake/leveldb.cmake
 !cmake/wiredtiger.cmake
+!cmake/mongodb.cmake
 !cmake/ukv.cmake
 *.ninja
 .clang-format
