Make: Enable/Disable DBs from CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,18 @@
 cmake_minimum_required(VERSION 3.20.1)
 
 #######################################################################################################################
+# Enable/Disable Databases
+#######################################################################################################################
+
+option(UCSB_BUILD_UKV "Build UKV for the benchmark" ON)
+option(UCSB_BUILD_ROCKSDB "Build RocksDB for the benchmark" ON)
+option(UCSB_BUILD_LEVELDB "Build LevelDB for the benchmark" ON)
+option(UCSB_BUILD_WIREDTIGER "Build WiredTiger for the benchmark" ON)
+option(UCSB_BUILD_MONGODB "Build MongoDB for the benchmark" OFF)
+option(UCSB_BUILD_REDIS "Build Redis for the benchmark" OFF)
+option(UCSB_BUILD_LMDB "Build LMDB for the benchmark" OFF)
+
+#######################################################################################################################
 # Set compiler
 #######################################################################################################################
 
@@ -81,12 +93,6 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG_SAFE_MODE -g")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG -O2")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -O2")
 
-# Custom flags.
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DHAS_FMT -DHAS_GTEST -DHAS_BENCHMARK -DHAS_NLOHMANN_JSON -DHAS_ROCKSDB -DHAS_LEVELDB -DHAS_WIREDTIGER -DHAS_LMDB -DHAS_UKV")
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DHAS_FMT -DHAS_GTEST -DHAS_BENCHMARK -DHAS_NLOHMANN_JSON -DHAS_ROCKSDB -DHAS_LEVELDB -DHAS_WIREDTIGER -DHAS_LMDB -DHAS_UKV")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DHAS_FMT -DHAS_GTEST -DHAS_BENCHMARK -DHAS_NLOHMANN_JSON -DHAS_ROCKSDB -DHAS_LEVELDB -DHAS_WIREDTIGER -DHAS_LMDB -DHAS_UKV")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DHAS_FMT -DHAS_GTEST -DHAS_BENCHMARK -DHAS_NLOHMANN_JSON -DHAS_ROCKSDB -DHAS_LEVELDB -DHAS_WIREDTIGER -DHAS_LMDB -DHAS_UKV")
-
 if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
   message("- Enabling SIMD for ARM")
 else()
@@ -119,15 +125,52 @@ include("${CMAKE_MODULE_PATH}/fmt.cmake")
 include("${CMAKE_MODULE_PATH}/argparse.cmake")
 include("${CMAKE_MODULE_PATH}/nlohmannjson.cmake")
 
-include("${CMAKE_MODULE_PATH}/rocksdb.cmake")
-include("${CMAKE_MODULE_PATH}/leveldb.cmake")
-include("${CMAKE_MODULE_PATH}/wiredtiger.cmake")
-include("${CMAKE_MODULE_PATH}/mongodb.cmake")
-include("${CMAKE_MODULE_PATH}/redis.cmake")
-include("${CMAKE_MODULE_PATH}/lmdb.cmake")
-include("${CMAKE_MODULE_PATH}/ukv.cmake")
+set(UCSB_DB_LIBS)
+add_executable(ucsb_bench ./src/bench.cxx)
 
-set(CXX_TARGET_LINK_LIBRARIES benchmark fmt rocksdb leveldb wiredtiger mongocxx_shared lmdb redis ukv)
+if(${UCSB_BUILD_UKV})
+  include("${CMAKE_MODULE_PATH}/ukv.cmake")
+  list(APPEND UCSB_DB_LIBS "ukv")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_UKV=1) 
+endif()
+
+if(${UCSB_BUILD_ROCKSDB})
+  include("${CMAKE_MODULE_PATH}/rocksdb.cmake")
+  list(APPEND UCSB_DB_LIBS "rocksdb")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_ROCKSDB=1) 
+endif()
+
+if(${UCSB_BUILD_LEVELDB})
+  include("${CMAKE_MODULE_PATH}/leveldb.cmake")
+  list(APPEND UCSB_DB_LIBS "leveldb")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_LEVELDB=1) 
+endif()
+
+if(${UCSB_BUILD_WIREDTIGER})
+  include("${CMAKE_MODULE_PATH}/wiredtiger.cmake")
+  list(APPEND UCSB_DB_LIBS "wiredtiger")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_WIREDTIGER=1) 
+endif()
+
+if(${UCSB_BUILD_MONGODB})
+  include("${CMAKE_MODULE_PATH}/mongodb.cmake")
+  list(APPEND UCSB_DB_LIBS "mongodb")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_MONGODB=1) 
+endif()
+
+if(${UCSB_BUILD_REDIS})
+  include("${CMAKE_MODULE_PATH}/redis.cmake")
+  list(APPEND UCSB_DB_LIBS "redis")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_REDIS=1) 
+endif()
+
+if(${UCSB_BUILD_LMDB})
+  include("${CMAKE_MODULE_PATH}/lmdb.cmake")
+  list(APPEND UCSB_DB_LIBS "lmdb")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_LMDB=1) 
+endif()
+
+set(CXX_TARGET_LINK_LIBRARIES benchmark fmt ${UCSB_DB_LIBS})
 set(CXX_TARGET_LINK_LIBRARIES_WITH_FLAGS z uring)
 
 set(CMAKE_THREAD_LIBS_INIT "-lpthread")
@@ -138,10 +181,9 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 #######################################################################################################################
-# Build tests benchmarks
+# Build UCSB
 #######################################################################################################################
 
-add_executable(ucsb_bench ./src/bench.cxx)
 target_link_libraries(ucsb_bench${ARTIFACT_SUFFIX} 
   ${CXX_TARGET_LINK_LIBRARIES}
   ${PKG_PACKAGES_LIBRARIES}
