Make: List available engines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,8 @@ set(UCSB_DB_LIBS)
 add_executable(ucsb_bench ./src/bench.cxx)
 
 if(${UCSB_BUILD_UKV})
-  set(UKV_ENGINE_NAME UMEM) # Choose engine
+  # Choose engine. Available engines: UMEM, ROCKSDB, LEVELDB, UDISK
+  set(UKV_ENGINE_NAME UMEM) 
 
   include("${CMAKE_MODULE_PATH}/ukv.cmake")
   list(APPEND UCSB_DB_LIBS "ukv")
