Refactor: Rename UKV to UStore and UMem to UCSet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 3.20.1)
 # Enable/Disable Databases
 #######################################################################################################################
 
-option(UCSB_BUILD_UKV "Build UKV for the benchmark" ON)
+option(UCSB_BUILD_USTORE "Build USTORE for the benchmark" ON)
 option(UCSB_BUILD_ROCKSDB "Build RocksDB for the benchmark" ON)
 option(UCSB_BUILD_LEVELDB "Build LevelDB for the benchmark" ON)
 option(UCSB_BUILD_WIREDTIGER "Build WiredTiger for the benchmark" ON)
@@ -129,13 +129,13 @@ include("${CMAKE_MODULE_PATH}/uring.cmake")
 set(UCSB_DB_LIBS)
 add_executable(ucsb_bench ./src/bench.cxx)
 
-if(${UCSB_BUILD_UKV})
-  # Choose engine. Available engines: UMEM, ROCKSDB, LEVELDB, UDISK
-  set(UKV_ENGINE_NAME UMEM) 
+if(${UCSB_BUILD_USTORE})
+  # Choose engine. Available engines: UCSET, ROCKSDB, LEVELDB, UDISK
+  set(USTORE_ENGINE_NAME UCSET) 
 
-  include("${CMAKE_MODULE_PATH}/ukv.cmake")
-  list(APPEND UCSB_DB_LIBS "ukv")
-  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_UKV=1) 
+  include("${CMAKE_MODULE_PATH}/ustore.cmake")
+  list(APPEND UCSB_DB_LIBS "ustore")
+  target_compile_definitions(ucsb_bench PUBLIC UCSB_HAS_USTORE=1) 
 endif()
 
 if(${UCSB_BUILD_ROCKSDB})
